--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	branch = master
 [submodule "lib/chibios-contrib"]
 	path = lib/chibios-contrib
-	url = https://github.com/SonixQMK/ChibiOS-Contrib
-	branch = sn32
+	url = https://github.com/HorrorTroll/ChibiOS-Contrib
+	branch = 240ack
 [submodule "lib/ugfx"]
 	path = lib/ugfx
 	url = https://github.com/qmk/uGFX
